# mjepa-cifar10

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  Makefile.config.template  README.md  pyproject.toml
.circleci/: config.yml
config/pretrain/: vit-small.yaml
mjepa_cifar10/: __init__.py  data.py  pretrain.py
scripts/: pretrain.py
