[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "mjepa-cifar10"
description = ""
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Scott Chase Waggener", email = "chase.waggener@icloud.com" },
]
dependencies = [
    "torch",
    "torchvision",
    "pyyaml",
    "torchmetrics",
    "safetensors",
    "tqdm",
    "vit @ git+https://github.com/TidalPaladin/vit.git",
    "mjepa @ git+https://github.com/TidalPaladin/mjepa.git",
    "wandb>=0.23.0",
]

readme = "README.md"
dynamic = [
    "version",
]

#[tool.uv]
#override-dependencies = ["vit @ git+https://github.com/TidalPaladin/vit.git"]

[dependency-groups]
dev = [
    "ruff",
    "basedpyright",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-env",
    "coverage",
    "pdbpp",
]

[project.license]
text = "Apache"

[project.optional-dependencies]

[tool.ruff]
line-length = 120
extend-exclude = ["_version.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = false

[tool.basedpyright]
include = ["mjepa_cifar10"]
exclude = ["**/node_modules", "**/__pycache__", "**/.pytest_cache", "**/_version.py"]
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
markers = [
    "ci_skip",
]
filterwarnings = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "mjepa_cifar10/_version.py"

# Set to true to allow installing git dependencies
[tool.hatch.metadata]
allow-direct-references = true